top-info nav line implemented. re-render by path change applied

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "YAD2",
+  "name": "Yad2 realestate replica",
   "icons": [
     {
       "src": "favicon.ico",
