--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-onclickoutside": "^6.9.0",
     "react-places-autocomplete": "^7.3.0",
