sign in/up wired

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
