--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap-hover-dropdown": "^2.2.1",
     "dotenv": "^8.2.0",
     "history": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.2.2",
