--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-onclickoutside": "^6.9.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
